<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/water_bg"
    tools:context="com.banjir.info.infobanjir.first_activity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senarai_negeri"
        android:id="@+id/txtSenarai"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/background_material_dark"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView android:id="@+id/image_perlis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_marginTop="30dp"
        android:maxWidth="120dp"
        android:maxHeight="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_perlis"
        android:layout_below="@id/txtSenarai"
        android:contentDescription="@string/perlis"
        android:onClick="perlis_click"/>

    <ImageView android:id="@+id/image_kedah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="120dp"
        android:maxHeight="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_kedah"
        android:layout_alignTop="@+id/image_perlis"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/kedah"
        android:onClick="kedah_click"/>

    <ImageView android:id="@+id/image_perak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="120dp"
        android:maxHeight="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_perak"
        android:layout_alignTop="@+id/image_kedah"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/perak"
        android:onClick="perak_click"/>

    <ImageView android:id="@+id/image_selangor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="120dp"
        android:maxHeight="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_selangor"
        android:layout_below="@+id/txtPerlis"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/selangor"
        android:onClick="selangor_click"/>

    <ImageView android:id="@+id/image_melaka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="120dp"
        android:maxHeight="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_melaka"
        android:layout_alignTop="@+id/image_selangor"
        android:layout_alignLeft="@+id/image_kedah"
        android:layout_alignStart="@+id/image_kedah"
        android:contentDescription="@string/melaka"
        android:onClick="melaka_click"/>

    <ImageView android:id="@+id/image_n9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="120dp"
        android:maxHeight="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_n9"
        android:layout_alignTop="@+id/image_selangor"
        android:layout_alignLeft="@+id/image_perak"
        android:layout_alignStart="@+id/image_perak"
        android:contentDescription="@string/negeri_sembilan"
        android:onClick="n9_click"/>

    <ImageView android:id="@+id/image_kl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="120dp"
        android:maxHeight="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_kl"
        android:layout_below="@+id/txtSelangor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/kl"
        android:onClick="kl_click"/>

    <ImageView android:id="@+id/image_sabah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="120dp"
        android:maxHeight="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_sabah"
        android:layout_alignTop="@+id/image_kl"
        android:layout_alignLeft="@+id/image_kedah"
        android:layout_alignStart="@+id/image_kedah"
        android:contentDescription="@string/sabah"
        android:onClick="sabah_click"/>

    <ImageView android:id="@+id/image_kelantan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="120dp"
        android:maxHeight="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_kelantan"
        android:layout_alignTop="@+id/image_kl"
        android:layout_alignLeft="@+id/image_perak"
        android:layout_alignStart="@+id/image_perak"
        android:contentDescription="@string/kelantan"
        android:onClick="kelantan_click"/>

    <ImageView android:id="@+id/image_labuan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="120dp"
        android:maxHeight="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_labuan"
        android:layout_below="@+id/txtKL"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/labuan"
        android:onClick="labuan_click"/>

    <ImageView android:id="@+id/image_pahang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="120dp"
        android:maxHeight="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_pahang"
        android:layout_alignBottom="@+id/image_labuan"
        android:layout_alignLeft="@+id/image_sabah"
        android:layout_alignStart="@+id/image_sabah"
        android:contentDescription="@string/pahang"
        android:onClick="pahang_click"/>

    <ImageView android:id="@+id/image_pulaupinang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="120dp"
        android:maxHeight="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_pulaupinang"
        android:layout_alignTop="@+id/image_pahang"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/pulau_pinang"
        android:onClick="pulaupinang_click"/>

    <ImageView android:id="@+id/image_sarawak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="120dp"
        android:maxHeight="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_sarawak"
        android:layout_below="@+id/txtLabuan"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/sarawak"
        android:onClick="sarawak_click"/>

    <ImageView android:id="@+id/image_terengganu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="120dp"
        android:maxHeight="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_terengganu"
        android:layout_alignBottom="@+id/image_sarawak"
        android:layout_alignLeft="@+id/image_sabah"
        android:layout_alignStart="@+id/image_sabah"
        android:contentDescription="@string/terengganu"
        android:onClick="terengganu_click"/>

    <ImageView android:id="@+id/image_johor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="120dp"
        android:maxHeight="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_johor"
        android:layout_alignTop="@+id/image_terengganu"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/johor"
        android:onClick="johor_click"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perlis"
        android:id="@+id/txtPerlis"
        android:onClick="perlis_click"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_below="@+id/image_perlis"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kedah"
        android:id="@+id/txtKedah"
        android:onClick="kedah_click"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_alignTop="@+id/txtPerlis"
        android:layout_alignLeft="@+id/image_kedah"
        android:layout_alignStart="@+id/image_kedah"
        android:layout_marginLeft="20dp"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perak"
        android:id="@+id/txtPerak"
        android:onClick="perak_click"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_alignTop="@+id/txtPerlis"
        android:layout_alignLeft="@+id/image_perak"
        android:layout_alignStart="@+id/image_perak"
        android:layout_marginLeft="20dp"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/melaka"
        android:id="@+id/txtMelaka"
        android:onClick="melaka_click"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_alignTop="@+id/txtSelangor"
        android:layout_alignLeft="@+id/image_kedah"
        android:layout_alignStart="@+id/image_kedah"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/negeri_sembilan"
        android:id="@+id/txtn9"
        android:onClick="n9_click"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_alignTop="@+id/txtSelangor"
        android:layout_alignLeft="@+id/image_perak"
        android:layout_alignStart="@+id/image_perak"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kuala_nlumpur"
        android:id="@+id/txtKL"
        android:onClick="kl_click"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_below="@+id/image_kl"
        android:layout_alignParentLeft="@+id/image_kl"
        android:layout_alignParentStart="@+id/image_kl"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sabah"
        android:id="@+id/txtSabah"
        android:onClick="sabah_click"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_alignTop="@+id/txtKL"
        android:layout_alignLeft="@+id/image_kedah"
        android:layout_alignStart="@+id/image_kedah"
        android:layout_marginLeft="20dp"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kelantan"
        android:id="@+id/txtKelantan"
        android:onClick="kelantan_click"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_alignTop="@+id/txtKL"
        android:layout_alignLeft="@+id/image_perak"
        android:layout_alignStart="@+id/image_perak"
        android:layout_marginLeft="5dp"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labuan"
        android:id="@+id/txtLabuan"
        android:onClick="labuan_click"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_below="@+id/image_labuan"
        android:layout_alignParentLeft="@+id/image_labuan"
        android:layout_alignParentStart="@+id/image_labuan"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pahang"
        android:id="@+id/txtPahang"
        android:onClick="pahang_click"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_alignTop="@+id/txtLabuan"
        android:layout_alignLeft="@+id/image_kedah"
        android:layout_alignStart="@+id/image_kedah"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pulau_pinang"
        android:onClick="pulaupinang_click"
        android:id="@+id/txtPP"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_alignTop="@+id/txtLabuan"
        android:layout_alignLeft="@+id/image_kelantan"
        android:layout_alignStart="@+id/image_kelantan"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sarawak"
        android:id="@+id/txtSarawak"
        android:onClick="sarawak_click"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_below="@+id/image_sarawak"
        android:layout_alignParentLeft="@+id/image_labuan"
        android:layout_alignParentStart="@+id/image_labuan"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tereng_nganu"
        android:id="@+id/txtTerengganu"
        android:onClick="terengganu_click"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_alignTop="@+id/txtSarawak"
        android:layout_alignLeft="@+id/image_terengganu"
        android:layout_alignStart="@+id/image_terengganu"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/johor"
        android:id="@+id/txtJohor"
        android:onClick="johor_click"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_alignTop="@+id/txtSarawak"
        android:layout_alignLeft="@+id/image_johor"
        android:layout_alignStart="@+id/image_johor"
        android:layout_marginLeft="20dp"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selangor"
        android:id="@+id/txtSelangor"
        android:onClick="selangor_click"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_below="@+id/image_selangor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/black" />
</RelativeLayout>
</ScrollView>
